Remove "Get" from execution metadata response
