# backend/test_observer/controllers/execution_metadata/execution_metadata.py
@@ -22,7 +22,7 @@ from sqlalchemy.orm import Session
 from test_observer.data_access.models import TestExecutionMetadata
 from test_observer.data_access.setup import get_db
 
-from .models import ExecutionMetadataGetResponse, ExecutionMetadata
+from .models import ExecutionMetadataResponse, ExecutionMetadata
 
 
 from . import execution_metadata
@@ -31,9 +31,9 @@ router = APIRouter(tags=["execution-metadata"])
 router.include_router(execution_metadata.router)
 
 
-@router.get("", response_model=ExecutionMetadataGetResponse)
+@router.get("", response_model=ExecutionMetadataResponse)
 def get_execution_metadata(db: Session = Depends(get_db)):
-    return ExecutionMetadataGetResponse(
+    return ExecutionMetadataResponse(
         execution_metadata=ExecutionMetadata.from_rows(
             db.execute(select(TestExecutionMetadata)).scalars().all()
         ),
