# backend/test_observer/controllers/execution_metadata/models.py
@@ -39,7 +39,7 @@ class ExecutionMetadata(RootModel[dict[str, list[str]]]):
         ]
 
 
-class ExecutionMetadataGetResponse(BaseModel):
+class ExecutionMetadataResponse(BaseModel):
     execution_metadata: ExecutionMetadata
 
 
